Fixes a big with the rounded corners on the project boxes on mobile

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -19,6 +19,15 @@
   }
 }
 
+@media only screen and (max-width: 46em) {
+  .non-featured {
+    .gatsby-image-wrapper {
+      border-bottom-left-radius: 0px;
+      border-top-right-radius: 15px;
+    }
+  }
+}
+
 .project:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
